objects/copadoccmint__Record_Type_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>copadoccmint__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>copado__Project__c</referenceTo>
        <relationshipLabel>Record Type Mappings</relationshipLabel>
        <relationshipName>Record_Type_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadoccmint__Salesforce_Record_Type_Name__c</fullName>
        <label>Salesforce Record Type Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoccmint__Third_Party_Record_Type_Name__c</fullName>
        <label>Third Party Record Type Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Record Type Mapping</label>
    <listViews>
        <fullName>All_values</fullName>
        <columns>copadoccmint__Project__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>copadoccmint__Salesforce_Record_Type_Name__c</columns>
        <columns>copadoccmint__Third_Party_Record_Type_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All values</label>
    </listViews>
    <nameField>
        <displayFormat>RTM-{000000000}</displayFormat>
        <label>Record Type Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Type Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>